Refactor Babylon demo: package, Gradle build, documentation
Package refactoring:
- Moved RuntimeCheck.java → com.skowronski.talk.jvmai
- Added package declaration
- Proper source directory structure

Build configuration (new build.gradle.kts):
- Added to Gradle multi-project build
- Configures Code Reflection incubator module
- Tasks: run, runSmoke

Removed:
- run-babylon.sh script (replaced by Gradle)
- demo/ directory (old compiled classes)
- HatMatMul.java (example moved to docs/)

Tasks:
- ./gradlew :demos:babylon:run (runtime check)
- ./gradlew :demos:babylon:runSmoke (same)

Documentation:
- README.md (updated with usage guide)
  - Expected outputs (with/without Babylon JDK)
  - Installation instructions
  - Clear requirements

- Findings.md (new technical analysis)
  - Code Reflection API overview
  - HAT architecture and benefits
  - Babylon vs TornadoVM comparison
  - Why this demo is limited (requires custom JDK)
  - Installation challenges

GitHub Action (.github/workflows/babylon.yml):
- Tests runtime check with standard JDK 25
- Validates graceful handling (Code Reflection not available)
- Documents where to get Babylon JDK

Changes to settings.gradle.kts:
- Added :demos:babylon to project

Note: This demo shows Code Reflection availability check only
Full HAT examples require custom Babylon JDK build

Co-Authored-By: Claude Sonnet 4.5 (1M context) <noreply@anthropic.com>